created header component

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@200;500&display=swap');
 
 :root {
-  --soft-white: #FCF1F1;
+  --soft-white: #FBFCFB;
   --grey: #A5A4A4;
-  --sage: #ADCEAB;
+  --sage: #9CBA9A;
 }
 
 body {
@@ -56,19 +56,33 @@ body {
   margin-left: 2rem;
 }
 
+.navbar {
+  background-color: var(--soft-white);
+}
+
 /* Nav Links */
 .navbar-nav {
   cursor: pointer;
-  background-color: var(--soft-white);
 }
 
 .navbar-nav a {
   color: var(--grey);
   text-transform: uppercase;
   font-size: 1.5rem;
+  font-family: 'Spartan', sans-serif;
+  margin: .5rem;
 }
 
 .navbar-nav a:hover {
   color: var(--sage);
 }
 
+/* Header */
+
+.header-wrapper {
+  background-color: var(--sage);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 90vh;
+}
